# frame

./: Example1.hs  README.md  frame.cabal
examples/: dummy.csv  presidents.csv  titanic.csv
src/Data/: Frame.hs
src/Data/Frame/: CSV.hs  Frame.hs  HFrame.hs  Instances.hs  Interactive.hs  Internal.hs  Pretty.hs  Types.hs
