name:                frame
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Stephen Diehl
maintainer:          stephen.m.diehl@gmail.com
copyright:           2014 Stephen Diehl
Category:            Math
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC == 7.6.1

Source-Repository head
    Type: git
    Location: git@github.com:sdiehl/frame.git

library
  exposed-modules:     
    Data.Frame.Frame
    Data.Frame.HFrame
    Data.Frame.Pretty
    Data.Frame.Interactive

  ghc-options:        -Wall -fwarn-tabs -O2 
  -- cc-options:         -O3
  build-depends:      
    base      >= 4.6 && <4.7 ,
    primitive >= 0.5 && < 0.6,
    vector    >= 0.10 && < 0.12,
    text      >= 0.11.1.0,
    pretty -any,
    boxes -any,
    containers -any,
    unordered-containers -any,
    hashable -any


  default-language:   Haskell2010
  Hs-source-dirs:     src
