name:                frame
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Stephen Diehl
maintainer:          stephen.m.diehl@gmail.com
copyright:           2014 Stephen Diehl
Category:            Math
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC == 7.6.1

Source-Repository head
    Type: git
    Location: git@github.com:sdiehl/frame.git

library
  exposed-modules:
    Data.Frame
    Data.Frame.Instances
    Data.Frame.HFrame
    Data.Frame.Pretty
    Data.Frame.CSV
    Data.Frame.Interactive

  ghc-options:
    -- -Wall
    -fwarn-tabs
    -O2
  build-depends: 
    base                  >= 4.6 && <4.7,
    primitive             >= 0.5 && < 0.6,
    deepseq               >= 1.3 && < 1.4,

    vector                >= 0.10 && < 0.12,
    lens                  >= 4.1.2 && < 5.0,

    text                  >= 0.11.1.0,
    bytestring            >= 0.10.4,

    vector-algorithms     >= 0.6,
    unordered-containers  >= 0.2.3,
    hashable              >= 1.0.1.1,

    time                  >= 1.4.0,
    datetime              >= 0.2.0,

    aeson                 >= 0.7.0,
    cassava               >= 0.3.0,
    attoparsec            >= 0.11.2,

    pretty                >= 1.1,
    boxes                 == 0.1.3,

    mtl -any,
    transformers -any,
    containers -any

  default-language:   Haskell2010
  Hs-source-dirs:     src
